partman-partitioning (48) UNRELEASED; urgency=low

  * Backing up from the "new partition size" question when resizing a
    partition now goes back to the menu of options for that partition, not
    to the partition tree.
  * Add another update-dev call during NTFS resizing; partition devices can
    be removed and re-added just after committing partition table changes.

 -- Colin Watson <cjwatson@debian.org>  Wed, 14 Mar 2007 22:16:23 +0000

partman-partitioning (47) unstable; urgency=low

  * Enable resizing of Windows Vista NTFS partitions again. Closes: #379835.
  * Wait for the device file to be created again after resizing an NTFS
    partition.

 -- Frans Pop <fjp@debian.org>  Wed,  7 Mar 2007 22:48:21 +0100

partman-partitioning (46) unstable; urgency=low

  [ Updated translations ]
  * Malayalam (ml.po) by Praveen A

 -- Frans Pop <fjp@debian.org>  Tue, 27 Feb 2007 18:24:57 +0100

partman-partitioning (45) unstable; urgency=low

  [ Colin Watson ]
  * Fix bugs.debian.org URL.

  [ Frans Pop ]
  * Show error dialog if there are errors during ntfsresize operations.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Belarusian (be.po) by Pavel Piatruk
  * Bulgarian (bg.po) by Damyan Ivanov
  * Danish (da.po) by Claus Hindsgaul
  * Esperanto (eo.po) by Serge Leblanc
  * Georgian (ka.po) by Aiet Kolkhi
  * Kurdish (ku.po) by Amed Çeko Jiyan
  * Latvian (lv.po) by Aigars Mahinovs
  * Malayalam (ml.po) by Praveen A
  * Norwegian Bokmål (nb.po) by Bjørn Steensrud
  * Panjabi (pa.po) by A S Alam
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Slovenian (sl.po) by Matej Kovačič

 -- Frans Pop <fjp@debian.org>  Tue, 30 Jan 2007 22:01:24 +0100

partman-partitioning (44) unstable; urgency=low

  [ Updated translations ]
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Indonesian (id.po) by Arief S Fitrianto
  * Kurdish (ku.po) by Erdal Ronahi
  * Vietnamese (vi.po) by Clytie Siddall
