@@ -9,8 +9,13 @@ cd $dev
 if [ -f $id/detected_filesystem ]; then
 	fs=$(cat $id/detected_filesystem)
 	case "$fs" in
-	    linux-swap|ext2|ext3|fat16|fat32)
+	    linux-swap|fat16|fat32)
 		true
+		;;
+	    ext2|ext3)
+		if ! search-path tune2fs || ! search-path resize2fs; then
+			exit 0
+		fi
 		;;
 	    ntfs)
 		if ! search-path ntfsresize; then
