@@ -10,13 +10,26 @@ cd $dev
 
 check_virtual
 
-if [ "$virtual" = no ] && [ -f $oldid/detected_filesystem ] && \
-   [ "$(cat $oldid/detected_filesystem)" = ntfs ]; then
-	if ! get_ntfs_resize_range; then
-		db_input critical partman-partitioning/impossible_resize || true
-		db_go || true
-		exit 1
-	fi
+if [ "$virtual" = no ] && [ -f $oldid/detected_filesystem ]; then
+	case "$(cat $oldid/detected_filesystem)" in
+		ntfs)
+			if ! get_ntfs_resize_range; then
+				db_input critical partman-partitioning/impossible_resize || true
+				db_go || true
+				exit 1
+			fi
+			;;
+		ext2|ext3)
+			if ! get_ext2_resize_range; then
+				db_input critical partman-partitioning/impossible_resize || true
+				db_go || true
+				exit 1
+			fi
+			;;
+		*)
+			get_resize_range
+			;;
+	esac
 else
 	get_resize_range
 fi
