@@ -9,7 +9,7 @@ XS-Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/partman/partman-partitioning
 Package: partman-partitioning
 XC-Package-Type: udeb
 Architecture: any
-Depends: ${fs:Depends}, ${misc:Depends}
+Depends: e2fsprogs-udeb, ${fs:Depends}, ${misc:Depends}
 Description: Partitioning operations for partman
  This udeb provides partman with editing operations for creation
  of new partitions, deletion of partitions and initialisation of the
