@@ -5,6 +5,8 @@ partman-partitioning (48) UNRELEASED; urgency=low
     to the partition tree.
   * Add another update-dev call during NTFS resizing; partition devices can
     be removed and re-added just after committing partition table changes.
+  * Use tune2fs/resize2fs to handle ext2/ext3 resizing, since libparted
+    can't deal with the resize_inode feature.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 14 Mar 2007 22:16:23 +0000
 
